Gjorde om resterande ord till kursivt

--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -210,7 +210,7 @@ Inom begreppet MDI tillhör interaktionsdesign som har som mål att öka männis
 Enligt upphovsmannen till UX, Donald Norman [13] består människa-centrerad designprocess av fyra steg som itereras enligt figur 2.1. I boken “The design of everyday things” [14] skriven av samma man tas det upp att denna metod även brukar kallas för “the spiral method” och syftar på att leverera framsteg vid varje iteration. Dessa fyra steg är:  
 
 \begin{enumerate}
-\item Observation handlar om att undersöka och förstå problemet. Det handlar om att undersöka och observera slutanvändaren för att kunna förstå deras behov, intresse och motivationer. Det görs genom att observera, lyssna och intervjua användarna. I detta steg bestäms designkraven. Med hjälp av undersökningen kan designern skapapersonas, vilket är användarprofiler som representerar slutanvändarna och inkluderar information om deras motivationer, mål, behov och förväntningar som beskrivs i boken “Universal Principles of Design” [15]. Dessa användarprofiler skapas i början av ett projekt och kan ändras i ett senare skede vid behov enligt Kim Flahertys artikel “Are Your Personas Outdated? Know When It’s Right To Revise”[16].
+\item Observation handlar om att undersöka och förstå problemet. Det handlar om att undersöka och observera slutanvändaren för att kunna förstå deras behov, intresse och motivationer. Det görs genom att observera, lyssna och intervjua användarna. I detta steg bestäms designkraven. Med hjälp av undersökningen kan designern skapa \textit{personas}, vilket är användarprofiler som representerar slutanvändarna och inkluderar information om deras motivationer, mål, behov och förväntningar som beskrivs i boken “Universal Principles of Design” [15]. Dessa användarprofiler skapas i början av ett projekt och kan ändras i ett senare skede vid behov enligt Kim Flahertys artikel “Are Your Personas Outdated? Know When It’s Right To Revise”[16].
 
 \item Idéskapande går ut på att baserat på designkraven hitta lösningar som uppfyller dessa krav. Tillvägagångssättet för den delen av designprocessen görs enligt följande tre steg:
 \begin{itemize}
@@ -229,15 +229,15 @@ I boken “The design of everyday things” [14] diskuteras även att genom iter
 
 \subsection{Utmaningar i UX-designprocessen}
 
-I rapporten “User experience prototyping - a literature review” [17] diskuterar Tuomas Nissinen fidelity-aspekten av prototyper som tas fram under designprocessen. Fidelity definieras som det koncept som betecknar hur lik en prototyp är slutprodukten. Det finns prototyper som tillämpar olika nivåer av fidelity där nivåerna kategoriseras enligt: low-fidelity prototyper, high-fidelity prototyper, mixed-fidelity prototyper och multi-fidelity prototyper. Dessa prototyper används vid olika situationer då kostnad, tid och syfte kan variera. Low-fidelity kan göras både med papper och penna och på datorn. Den syftar på att presentera ett koncept eller idé istället för att presentera funktionaliteten av hela systemet. Dessa prototyper brukar göras tidigt i designprocessen, är snabba och har extremt låg kostnad. Några nackdelar med dem är att de har begränsningar angående användbarheten och testningen. En high-fidelity prototyp har däremot all funktionalitet av systemet samt stödjer användarinteraktion med det. Den är väldigt lik slutprodukten och är väl anpassad för testning. Stödet för interaktiv funktionalitet gör dessa prototyper speciellt användbara vid upptäckt av användbarhetsproblem. Nackdelarna är dock att de är mycket mer tidskrävande än low-fidelity prototyper samt att de är mer kostsamma att ta fram. High-fidelity prototyper är inte heller anpassade för visualisering av komplex funktionalitet. Mixed-fidelity och multi-fidelity prototyper är blandningar av de tidigare nämnda prototyperna. Enligt Tuomas Nissinen är skapandet av interaktiva prototyper en stor utmaning för designers. Detta eftersom det skulle vara väldigt tidskrävande att stödja interaktiv funktionalitet i low-fidelity prototyper eller implementera komplex funktionalitet i high-fidelity prototyper.
+I rapporten “User experience prototyping - a literature review” [17] diskuterar Tuomas Nissinen \textit{fidelity}-aspekten av prototyper som tas fram under designprocessen. \textit{Fidelity} definieras som det koncept som betecknar hur lik en prototyp är slutprodukten. Det finns prototyper som tillämpar olika nivåer av \textit{fidelity} där nivåerna kategoriseras enligt: \textit{low-fidelity}prototyper, \textit{high-fidelity}prototyper, \textit{mixed-fidelity}prototyper och \textit{multi-fidelity}prototyper. Dessa prototyper används vid olika situationer då kostnad, tid och syfte kan variera. \textit{Low-fidelity} kan göras både med papper och penna och på datorn. Den syftar på att presentera ett koncept eller idé istället för att presentera funktionaliteten av hela systemet. Dessa prototyper brukar göras tidigt i designprocessen, är snabba och har extremt låg kostnad. Några nackdelar med dem är att de har begränsningar angående användbarheten och testningen. En \textit{high-fidelity}prototyp har däremot all funktionalitet av systemet samt stödjer användarinteraktion med det. Den är väldigt lik slutprodukten och är väl anpassad för testning. Stödet för interaktiv funktionalitet gör dessa prototyper speciellt användbara vid upptäckt av användbarhetsproblem. Nackdelarna är dock att de är mycket mer tidskrävande än \textit{low-fidelity}prototyper samt att de är mer kostsamma att ta fram. \textit{High-fidelity}prototyper är inte heller anpassade för visualisering av komplex funktionalitet. \textit{Mixed-fidelity} och \textit{multi-fidelity}prototyper är blandningar av de tidigare nämnda prototyperna. Enligt Tuomas Nissinen är skapandet av interaktiva prototyper en stor utmaning för designers. Detta eftersom det skulle vara väldigt tidskrävande att stödja interaktiv funktionalitet i \textit{low-fidelity}prototyper eller implementera komplex funktionalitet i \textit{high-fidelity}prototyper.
 
-Enligt Kate Pernice i Nielsen Norman Group [18] måste en prototyp av ett användargränssnitt testas för att möjliggöra bedömningen av dess användbarhet. Vid testning av prototypen måste alltså användaren få gensvar från prototypen vid handlingar och detta kan göras på två sätt. Det ena sättet går ut på att en person som är bekant med designen ska ge gensvar till användare testar prototypen och en sådan prototyp kallas för statisk. Det andra sättet som implementera dessa gensvar vilket resulterar i en interaktiv prototyp. Skapandet av en sådan prototyp kan bli tidskrävande. Även Pernice lyfter fram de områden där fidelitykan variera vilka är interaktivitet, innehåll, kommando och visuellt. 
+Enligt Kate Pernice i Nielsen Norman Group [18] måste en prototyp av ett användargränssnitt testas för att möjliggöra bedömningen av dess användbarhet. Vid testning av prototypen måste alltså användaren få gensvar från prototypen vid handlingar och detta kan göras på två sätt. Det ena sättet går ut på att en person som är bekant med designen ska ge gensvar till användare testar prototypen och en sådan prototyp kallas för statisk. Det andra sättet som implementera dessa gensvar vilket resulterar i en interaktiv prototyp. Skapandet av en sådan prototyp kan bli tidskrävande. Även Pernice lyfter fram de områden där \textit{fidelity} kan variera vilka är interaktivitet, innehåll, kommando och visuellt. 
 
 Vid utveckling av design för ett system, en tjänst eller en produkt krävs det även ett team som ska utveckla det som ligger bakom designen och utgör funktionaliteten. Teamet är delar av större organisationer och enligt en undersökning gjord av Project Management Institute [19] använder sig 71\% av de 3234 organisationer från olika branscher som deltog i undersökningen, av Agila metoder ibland, ofta eller alltid. När UX-designers ska följa Agila metoder kan det bli problematiskt. I en rapport skriven av Michael Budwig, Soojin Jeong och Kuldeep Kelkar vid namn “When User Experience Met Agile: A Case Study” [20] beskrivs svårigheter som kan uppstå vid denna situation. På grund av att UX-teamet behöver utveckla designen innan utvecklingsteamet har utvecklat det bakomliggande systemet skedde det ofta att UX-teamet inte kunde få nödvändiga inputs från utvecklingsgruppens medlemmar. Vid uppkomsten av problem och nya krav för produkten i sprinter är UX-teamet tvungna att hantera både nya problem som har uppkommit, de som var kvar sedan tidigare och samtidigt leverera sina primära projekt i tid. Detta kan orsaka en stressig och negativ arbetsmiljö för UX-teamet. 
 
-I rapporten “Experience Prototyping” [21] påpekas det att designers borde utforska genom att göra, eftersom även små ändringar i ett användargränssnitt kan ha stora konsekvenser i den slutliga användarupplevelsen. Rapporten lyfter även fram betydelsen av skapandet av flera prototyper och påverkan de kan ha på slutprodukten. Detta eftersom en enda prototyp inte är tillräcklig för att designern ska kunna bestämma vilka element som ska användas och hur de ska presenteras i användargränssnittet. Ett sätt att ta reda på designmöjligheter och identifiera möjliga problem är genom direkt användarinteraktion med systemet vilket uppnås med high-fidelityprototyper vilket oftast är kostsamt och därför kan det hända att det ofta inte är möjligt att genomföra.
+I rapporten “Experience Prototyping” [21] påpekas det att designers borde utforska genom att göra, eftersom även små ändringar i ett användargränssnitt kan ha stora konsekvenser i den slutliga användarupplevelsen. Rapporten lyfter även fram betydelsen av skapandet av flera prototyper och påverkan de kan ha på slutprodukten. Detta eftersom en enda prototyp inte är tillräcklig för att designern ska kunna bestämma vilka element som ska användas och hur de ska presenteras i användargränssnittet. Ett sätt att ta reda på designmöjligheter och identifiera möjliga problem är genom direkt användarinteraktion med systemet vilket uppnås med \textit{high-fidelity}prototyper vilket oftast är kostsamt och därför kan det hända att det ofta inte är möjligt att genomföra.
 
-I en undersökning som gjordes med designers av användargränssnitt i rapporten “How is User Interface Prototyping Really Done in Practice? A Survey of User Interface Designers” [22] observerades och analyserades designers som designar användargränssnitt, även kallade UI-designers, vanor vid design av användargränssnitt. 65\% av de deltagande UI-designerna föredrar att använda sig av verktyg som kommer ge low-fidelityeftersom det går snabbt att skapa. Av de UI-designers som föredrar att använda sig av high-fidelityverktyg är det 85\% som gör det eftersom det modellerar det slutgiltiga systemet korrekt. Enligt undersökningen är den vanligaste metoden för att ta fram ett användargränssnitt att rita. Detta trots att 48\% av UI-designerna anser att slutanvändare inte tar low-fidelity prototyper seriöst och 39\% av deltagarna anser att de inte kan testa komplexa interaktioner. En tanke för framtida designverktyg var att de borde ha dessa två aspekter i fokus - snabbhet och korrekthet. 
+I en undersökning som gjordes med designers av användargränssnitt i rapporten “How is User Interface Prototyping Really Done in Practice? A Survey of User Interface Designers” [22] observerades och analyserades designers som designar användargränssnitt, även kallade UI-designers, vanor vid design av användargränssnitt. 65\% av de deltagande UI-designerna föredrar att använda sig av verktyg som kommer ge \textit{low-fidelity} eftersom det går snabbt att skapa. Av de UI-designers som föredrar att använda sig av \textit{high-fidelity}verktyg är det 85\% som gör det eftersom det modellerar det slutgiltiga systemet korrekt. Enligt undersökningen är den vanligaste metoden för att ta fram ett användargränssnitt att rita. Detta trots att 48\% av UI-designerna anser att slutanvändare inte tar \textit{low-fidelity}prototyper seriöst och 39\% av deltagarna anser att de inte kan testa komplexa interaktioner. En tanke för framtida designverktyg var att de borde ha dessa två aspekter i fokus - snabbhet och korrekthet. 
 
 I rapporten “User Interface Prototyping: Tools and Techniques” [23] presenteras ett antal krav för prototypverktyg vid samling av viktig information för det systemet som ska byggas, sådan information kan vara vilka uppgifter användaren ska kunna utföra vid interaktion med systemet men även användargränssnittets utseende. Kraven som ett prototypverktyg ska ha är att det bland annat ska: 
 
@@ -278,7 +278,7 @@ Elastic stack är ett verktyg som kan ta data från vilken källa som helst, i v
 
 \subsection{Logstash} 
 
-Enligt produktbeskrivningen för Logstash på Elastic Stacks hemsida [28] är Logstash en dataprocessor för server-sidan som samlar data från många olika källor samtidigt, förvandlar dem och skickar sedan dem till det stashsom anges. Detta är ofta Elasticsearch eftersom de har en mycket stark synergi mellan varandra. Processhanteringen är en pipelinemed tre steg:inputs $\rightarrow$ filter $\rightarrow$ outputs. Inputs genererar händelser, filter ändrar dem och outputs skickar dem någon annanstans.
+Enligt produktbeskrivningen för Logstash på Elastic Stacks hemsida [28] är Logstash en dataprocessor för server-sidan som samlar data från många olika källor samtidigt, förvandlar dem och skickar sedan dem till det \textit{stash} som anges. Detta är ofta Elasticsearch eftersom de har en mycket stark synergi mellan varandra. Processhanteringen är en pipelinemed tre steg:inputs $\rightarrow$ filter $\rightarrow$ outputs. Inputs genererar händelser, filter ändrar dem och outputs skickar dem någon annanstans.
 
 \subsection{Beats}
 
@@ -317,9 +317,9 @@ För att identifiera utmaningar i den traditionella designprocessen genomfördes
 
 \section{Utvärdering av UX-designprocessen vid användning av Kibana}
 
-Efter att produkten tagits fram och UX-designprocessen specificerats gjordes en utvärdering av UX-designprocessen. Denna utvärdering utfördes av UX-designers via ett formulär där hela UX-designprocessen vid användning av Kibana beskrevs. Även en beskrivning av visualiseringsverktyget Kibana inkluderades för att möjliggöra UX-designers som inte haft erfarenhet av verktyget att besvara formuläret. I formuläret skulle sedan påståenden besvaras angående olika aspekter av UX-designprocessen i Kibana såsom begränsningar och särskilda funktioner. Erfarna UX-designers var vana vid att arbeta enligt den traditionella UX-designprocessen och ansågs därför som lämpliga kandidater för undersökningen. En erfaren UX-designer definierade projektdeltagarna som en person som hade tre år eller mer erfarenhet av att arbeta med design. Formuläret skickades ut till 60 kandidater genom deras profiler på LinkedIn och formuläret kan hittas i appendix.
+Efter att produkten tagits fram och UX-designprocessen specificerats gjordes en utvärdering av UX-designprocessen. Denna utvärdering utfördes av UX-designers via ett formulär där hela UX-designprocessen vid användning av Kibana beskrevs. Även en beskrivning av visualiseringsverktyget Kibana inkluderades för att möjliggöra UX-designers som inte haft erfarenhet av verktyget att besvara formuläret. I formuläret skulle sedan påståenden besvaras angående olika aspekter av UX-designprocessen i Kibana såsom begränsningar och särskilda funktioner. Erfarna UX-designers var vana vid att arbeta enligt den traditionella UX-designprocessen och ansågs därför som lämpliga kandidater för undersökningen. En erfaren UX-designer definierade projektdeltagarna som en person som hade tre år eller mer erfarenhet av att arbeta med design. Formuläret skickades ut till 60 kandidater genom deras profiler på LinkedIn och formuläret kan hittas i A.1.
 
-Det som utvärderingen fokuserade på var svårigheter inom UX-designprocessen, främst det tredje steget, prototypskapande och det fjärde, testning. Inom skapandet av prototypen fanns det svårigheter vid att få prototypen och slutprodukten att vara lika främst gällande det visuella, innehållet, interaktionen och funktionaliteten eftersom utvecklare och designers använde olika verktyg. Ändringar som skulle göras på designen kunde även komma att bli kostsamma och därför fokuserade även utvärderingen på optimering av ändring av användargränssnittet. Vid testningen var det en del faktorer som försvårade att testa den riktiga funktionaliteten på produkten, bland annat att det var väldigt tidskrävande och att designers inte alltid visste systemets begränsningar. UX-designprocessen utfördes så många omgångar det krävdes för att få kunden nöjd inom tidsramen för projektet. För att utföra testningen genomfördes djupintervjuer i grupper med 5 personer. Deltagarnas användarupplevelse noterades genom ett formulär. Testningen var uppdelad i fyra moment: allmänna frågor, grundläggande trafikförståelse, avancerad trafikförståelse och sammanfattning. De tre första momenten baserades på uppgifter som skulle utföras av deltagarna. Dessa uppgifter betygsattes sedan av deltagarna baserat på svårighet vid utförandet genom en skala från ett till fem eller ett till tio. Frågorna som ställdes och de möjliga svarsalternativen finns i appendix.
+Det som utvärderingen fokuserade på var svårigheter inom UX-designprocessen, främst det tredje steget, prototypskapande och det fjärde, testning. Inom skapandet av prototypen fanns det svårigheter vid att få prototypen och slutprodukten att vara lika främst gällande det visuella, innehållet, interaktionen och funktionaliteten eftersom utvecklare och designers använde olika verktyg. Ändringar som skulle göras på designen kunde även komma att bli kostsamma och därför fokuserade även utvärderingen på optimering av ändring av användargränssnittet. Vid testningen var det en del faktorer som försvårade att testa den riktiga funktionaliteten på produkten, bland annat att det var väldigt tidskrävande och att designers inte alltid visste systemets begränsningar. UX-designprocessen utfördes så många omgångar det krävdes för att få kunden nöjd inom tidsramen för projektet. För att utföra testningen genomfördes djupintervjuer i grupper med 5 personer. Deltagarnas användarupplevelse noterades genom ett formulär. Testningen var uppdelad i fyra moment: allmänna frågor, grundläggande trafikförståelse, avancerad trafikförståelse och sammanfattning. De tre första momenten baserades på uppgifter som skulle utföras av deltagarna. Dessa uppgifter betygsattes sedan av deltagarna baserat på svårighet vid utförandet genom en skala från ett till fem eller ett till tio. Frågorna som ställdes och de möjliga svarsalternativen finns i A.3.
 
 
 \section{Utvärdering av kommunikationen mellan Agila utvecklare och UX-designers under UX-designprocessen vid användning av Kibana}
@@ -454,7 +454,7 @@ UX-designprocessen som togs fram under detta projekt följde stegen i figur 4.1.
 \end{figure}
 
 \begin{itemize}
-\item Produktskapande gick ut på att skapa produktens användargränssnitt. Att experimentera med olika designer, demonstrera användargränssnittet till ledningen och att kontrollera om produkten är funktionell och användbar var del av detta steg. High-fidelity nåddes på grund av att ingen prototyp togs fram och istället skapades produkten som kunde tillämpa all funktionalitet systemet kunde erbjuda.
+\item Produktskapande gick ut på att skapa produktens användargränssnitt. Att experimentera med olika designer, demonstrera användargränssnittet till ledningen och att kontrollera om produkten är funktionell och användbar var del av detta steg. \textit{High-fidelity} nåddes på grund av att ingen prototyp togs fram och istället skapades produkten som kunde tillämpa all funktionalitet systemet kunde erbjuda.
 \item Testninghandlade om att observera interaktionen mellan produkten och användare. Det kunde även göras genom demonstration av olika versioner av användargränssnittet till användarna, intervjua användaren, ställa frågor, använda sig av enkäter för att kunna identifiera svårigheter med användargränssnittet. Produkten testades mot systemet och all funktionalitet gick att testa mot användargränssnittet. Användarinteraktionen gjordes som om \textit{dashboarden} var slutprodukten. Vid önskemål av testare kunde även UI-element i produkten ändras. 
 \end{itemize}
 
@@ -462,7 +462,7 @@ UX-designprocessen som togs fram under detta projekt följde stegen i figur 4.1.
 Formuläret för utvärdering av UX-designprocessen vid användning av Kibana besvarades av 32 lämpliga kandidater. Eftersom formuläret skickades ut till 60 personer resulterade detta i en svarsfrekvens på 53\%. En sammanfattning av utvärderingen blev följande:
 
 \begin{itemize}
-\item Att Kibana möjliggjorde high-fidelity vid aspekterna interaktion, funktionalitet och visualisering tyckte 88\% av deltagarna var bra eller mycket bra egenskaper.
+\item Att Kibana möjliggjorde \textit{high-fidelity} vid aspekterna interaktion, funktionalitet och visualisering tyckte 88\% av deltagarna var bra eller mycket bra egenskaper.
 
 \item 69\% av deltagarna stördes väldigt mycket eller stördes lite av att det fanns begränsningar i hur anpassningsbara vissa UI-element var. Som t.ex. att tjockleken på staplar i stapeldiagram och tjockleken på cirkeldiagram med centrumhål inte gick att anpassa. 22\% av deltagarna stördes inte alls av denna begränsning.
 
@@ -491,11 +491,11 @@ Svårigheter vid kommunikationen mellan Agila utvecklare och UX-designers elimin
 
 \section{Tillämpning av UX-designprocess vid användning av Kibana}
 
-Nedanstående steg upprepades tre gånger och slutprodukten finns tillgänglig i appendix.  
+Nedanstående steg upprepades tre gånger och slutprodukten finns tillgänglig i A.5.  
 
 \subsection{ Utforska slutanvändare och ta fram deras behov och krav
 }
-Det första steget gick ut på att förstå användarna och deras behov. Det gjordes genom att analysera data som skulle presenteras för att komma fram till intressant information som skulle kunna lyftas fram med presentation av data. För att göra detta skapades användarprofiler, även kallas för personas,som representerade slutanvändaren av produkten. I dessa personasbeskrevs användares behov, mål och egenskaper och finns i appendix. Personasskapades endast under den första iterationen. Utifrån dessa personasdefinierades designkraven för \textit{dashboarden} gällande visualiseringen av data. De definierade designkraven gick ut på att presentera följande information på \textit{dashboarden}:
+Det första steget gick ut på att förstå användarna och deras behov. Det gjordes genom att analysera data som skulle presenteras för att komma fram till intressant information som skulle kunna lyftas fram med presentation av data. För att göra detta skapades användarprofiler, även kallas för \textit{personas}, som representerade slutanvändaren av produkten. I dessa \textit{personas} beskrevs användares behov, mål och egenskaper och finns i A.2. \textit{Personas} skapades endast under den första iterationen. Utifrån dessa \textit{personas} definierades designkraven för \textit{dashboarden} gällande visualiseringen av data. De definierade designkraven gick ut på att presentera följande information på \textit{dashboarden}:
 
 \begin{itemize}
 \item Hur många bilar åker igenom varje betalstation och/eller stad?
@@ -531,7 +531,7 @@ Efter att användare godkände ritningen skapades en \textit{dashboard} i Kibana
 
 \subsection{ Testa produkten mot slutanvändare genom djupintervjuer 
 }
-Därefter utfördes testning av \textit{dashboarden} i en grupp av fem personer som representerade möjliga slutanvändare. Testningen genomfördes genom att ställa frågor till användaren angående \textit{dashboarden} och att låta användaren utföra specificerade uppgifter på \textit{dashboarden}. Det utfördes tre iterationer av UX-designprocessen vid användning av Kibana. Användaren observerades vid testningen av produkten och handlingar, tankar och åsikter under utförandet noterades och stod i fokus vid förbättring av \textit{dashboarden}. Frågor som ställdes till användarna vid testning kan hittas i appendix. Svar från dessa frågor och anteckningar från testning användes vid framtagandet av nästa \textit{dashboard}. Vid varje iteration testades varje ny \textit{dashboard} och detaljerat testresultat kan hittas i appendix. En sammanställning av testresultatet presenteras nedan. 
+Därefter utfördes testning av \textit{dashboarden} i en grupp av fem personer som representerade möjliga slutanvändare. Testningen genomfördes genom att ställa frågor till användaren angående \textit{dashboarden} och att låta användaren utföra specificerade uppgifter på \textit{dashboarden}. Det utfördes tre iterationer av UX-designprocessen vid användning av Kibana. Användaren observerades vid testningen av produkten och handlingar, tankar och åsikter under utförandet noterades och stod i fokus vid förbättring av \textit{dashboarden}. Frågor som ställdes till användarna vid testning och svaren kan hittas i A.3. Svar från dessa frågor och anteckningar från testning användes vid framtagandet av nästa \textit{dashboard}. Vid varje iteration testades varje ny \textit{dashboard} och ett detaljerat testresultat kan hittas i A.4. En sammanställning av testresultatet presenteras nedan. 
 
 \begin{enumerate}
 \item Första iterationens testresultat:
@@ -615,7 +615,7 @@ I detta kapitel kommer UX-designprocessen vid användning av Kibana analyseras o
 \section{ Jämförelse mellan UX-designprocess vid användning av Kibana och den traditionella UX-designprocessen}
 Den UX-designprocessen som togs fram vid användning av Kibana följde den traditionella UX-designprocessen och var lik den gällande de två första stegen: observation och idéskapandet. Under dessa steg genomfördes arbetet i det här projektet som om de hade genomförts vid tillämpningen av den traditionella UX-designprocessen. De två sista stegen i den framtagna UX-designprocessen som var produktskapandet och testning skiljde sig från de två sista stegen i den traditionella UX-designprocessen som var prototypskapandet och testning. De skiljde sig åt vad det gällde tillvägagångssätt och innehåll. 
 
-Produktskapandet skulle gå till genom att implementera lösningar för det som togs fram under idéskapandet genom att ta fram \textit{dashboards} som hade high-fidelity. Detta betydde att varje \textit{dashboard} som togs fram skulle stödja all funktionalitet som systemet erbjöd och skulle kunna vara slutprodukten. Detta var något som var kostsamt vid den traditionella UX-designprocessen eftersom en high-fidelity prototyp skulle kräva mycket förberedelse för att kunna efterlikna slutproduktens funktionalitet. 
+Produktskapandet skulle gå till genom att implementera lösningar för det som togs fram under idéskapandet genom att ta fram \textit{dashboards} som hade \textit{high-fidelity}. Detta betydde att varje \textit{dashboard} som togs fram skulle stödja all funktionalitet som systemet erbjöd och skulle kunna vara slutprodukten. Detta var något som var kostsamt vid den traditionella UX-designprocessen eftersom en \textit{high-fidelity}prototyp skulle kräva mycket förberedelse för att kunna efterlikna slutproduktens funktionalitet. 
 
 Under produktskapandet skulle det vara möjligt att återanvända UI-elements som har skapats i flera \textit{dashboards}. På grund av detta effektiviserades skapandet av \textit{dashboards} och flera \textit{dashboards} kunde skapas vid en iteration. Det märkvärdiga med detta var att om ett UI-element användes i olika \textit{dashboards} och det ändrades på ett ställe så skulle det ändras i alla andra \textit{dashboards} som det fanns. En sådan ändring skulle spara tid för UX-designern. 
 
@@ -624,7 +624,7 @@ Testningen i UX-designprocessen vid användning av Kibana hade också några ski
 En stor begränsning som UX-designprocessen vid användning av Kibana hade var att den enbart skulle kunna användas för visualisering av data. Detta var en väldigt stor begränsning jämfört med den traditionella UX-designprocessen som skulle kunna användas på alla olika områden. 
 
 \section{Utvärdering av UX-designprocess vid användning av Kibana}
-Efter utvärderingen av UX-designprocessen kunde det konstateras att majoriteten av deltagarna hade ett positivt intryck av att ta fram och testa en produkt istället för prototyp i UX-designprocessen. Detta eftersom det säkerställde high-fidelity av \textit{dashboarden} i tre aspekter: interaktivitet, funktionalitet och visualisering utan att det blev kostsamt eller tidskrävande. Det var även positivt eftersom all funktionalitet i systemet kunde testas på ett ekonomiskt sätt gällande både tid och pengar. 
+Efter utvärderingen av UX-designprocessen kunde det konstateras att majoriteten av deltagarna hade ett positivt intryck av att ta fram och testa en produkt istället för prototyp i UX-designprocessen. Detta eftersom det säkerställde \textit{high-fidelity} av \textit{dashboarden} i tre aspekter: interaktivitet, funktionalitet och visualisering utan att det blev kostsamt eller tidskrävande. Det var även positivt eftersom all funktionalitet i systemet kunde testas på ett ekonomiskt sätt gällande både tid och pengar. 
 
 Däremot var det en väldigt stor del av deltagarna som tyckte att begränsningarna vid visualisering i Kibana var negativt eftersom UX-designerna inte hade den friheten de ofta behövde. Detta inkluderade följande: 
 \begin{itemize}
@@ -654,7 +654,7 @@ Däremot kunde det finnas ekonomiska aspekter i projekt som begränsade både ti
 I detta avsnitt kommer tillämpningen av UX-designprocessen analyseras. Även för- och nackdelar kommer tas upp och alternativa metoder som hade kunnat ge bättre resultat kommer diskuteras.  Reflektioner som kommer tas upp i detta avsnitt är baserade på projektdeltagarnas erfarenheter under projektets gång.
 
 \subsection{Utforska slutanvändare och ta fram deras behov och krav} 
-Vid framtagandet av personas var en av nackdelarna att det inte fanns en tänkt slutanvändare eftersom produkten endast skulle tas fram i syfte att testa UX-designprocessen vid användning av Kibana. Eftersom det inte fanns några tänkta användare togs dessa personas fram av projektdeltagarna och blev då inte så specificerade som de hade kunnat blivit. Det som hade kunnat göras istället var att ställa frågor utåt genom formulär för att ta reda på vad människor hade velat ha som designkrav, eftersom den tänkta målgruppen ändå var en genomsnittlig svensk som var intresserad av trafikinformation i Sverige. Detta hade underlättat vid de andra stegen i designprocessen då det hade funnits ett mer specificerat mål och krav i alla steg.
+Vid framtagandet av \textit{personas} var en av nackdelarna att det inte fanns en tänkt slutanvändare eftersom produkten endast skulle tas fram i syfte att testa UX-designprocessen vid användning av Kibana. Eftersom det inte fanns några tänkta användare togs dessa \textit{personas} fram av projektdeltagarna och blev då inte så specificerade som de hade kunnat blivit. Det som hade kunnat göras istället var att ställa frågor utåt genom formulär för att ta reda på vad människor hade velat ha som designkrav, eftersom den tänkta målgruppen ändå var en genomsnittlig svensk som var intresserad av trafikinformation i Sverige. Detta hade underlättat vid de andra stegen i designprocessen då det hade funnits ett mer specificerat mål och krav i alla steg.
 
 \subsection{Ta fram lösningar som uppfyller dessa behov och krav}
 För att ta fram lösningar krävdes det en hel del förarbete inom Kibana av projektdeltagarna, som inte hade någon erfarenhet av visualiseringsverktyget. För att ta reda på vilka möjligheter som fanns för visualisering behövde projektdeltagarna vetskap angående vilka UI-element som fanns tillgängliga, hur de kunde anpassas och hur de kunde kombineras i Kibana. Om personen som skulle använda sig av Kibana hade varit erfaren av visualiseringsverktyget, som projektdeltagarna känner sig vara efter projektet, hade detta dock inte varit ett problem. Därmed hade detta endast varit problematiskt vid den första användningen av Kibana.
@@ -687,7 +687,7 @@ Vid den tredje itereringen upplevdes \textit{dashboarden} mer intuitiv, struktur
 Efter att projektet slutförts ansåg projektdeltagarna att en bättre metod hade kunnat väljas för att mäta svårighetsnivå på uppgifter. När testarna själva skulle betygsätta svårighet var det väldigt beroende av känslor och åsikter, vilket ur ett UX-perspektiv var bra, men någonting som hade kunnat ge mer konkreta resultat som hade varit värdefullt vid analysen av testningen hade varit att ta tid på en testare från att uppgiften blivit förklarad till att den blivit slutförd. 
 
 \section{Förberedelse av data för visualisering}
-För att möjliggöra tillämpningen av UX-designprocessen vid användning av Kibana implementerades full-stackutveckling under detta projekt. Vid utvecklingen förekom några svårigheter angående förberedelsen av data inför visualisering. Datakällan som valdes var statisk och mycket tid ägnades åt att simulera en dataström från den källan. Hade projektdeltagarna istället valt en datakälla som redan var strömmande hade den tiden kunnat läggas på andra saker i projektet. Datakällan som valdes borde också varit så konsistent och fullständigt för visualisering som möjligt. 
+För att möjliggöra tillämpningen av UX-designprocessen vid användning av Kibana implementerades \textit{full-stack}utveckling under detta projekt. Vid utvecklingen förekom några svårigheter angående förberedelsen av data inför visualisering. Datakällan som valdes var statisk och mycket tid ägnades åt att simulera en dataström från den källan. Hade projektdeltagarna istället valt en datakälla som redan var strömmande hade den tiden kunnat läggas på andra saker i projektet. Datakällan som valdes borde också varit så konsistent och fullständigt för visualisering som möjligt. 
 
 I det här projektet lades en stor del av tiden åt modifiering av data så att de skulle gå från en icke kompatibel form i Kibana till att de blev kompatibla med Kibana. Några av modifieringarna som gjordes var att sammanställa datum och tidpunkten av varje objekt i ett nytt fält för att skapa en tidsstämpel som skulle kunna användas senare av Kibana vid visualisering. 
 
